--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   firebase_storage: ^2.1.0
   cloud_firestore: ^0.9.13
   firebase_core:
+  image_picker: ^0.6.1+3
 
 dev_dependencies:
   flutter_test:
