--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   cloud_firestore: ^0.9.13
   firebase_core:
   image_picker: ^0.6.1+3
+  cached_network_image: ^0.8.0
 
 dev_dependencies:
   flutter_test:
